[package]
name = "mongoc-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", default-features = false, features = ["sync"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[build-dependencies]
cbindgen = "0.20.0"