[package]
name = "mongoc-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { path = "/home/patrick/mongo-rust-driver", default-features = false, features = ["sync"] }
anyhow = "1"
bitflags = "1.3.2"

[build-dependencies]
cbindgen = "0.20.0"